writeup complete additional paramter tuning

--- a/detection.ipynb
+++ b/detection.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 18%|█▊        | 231/1261 [06:27<28:57,  1.69s/it]"
+      "100%|█████████▉| 1260/1261 [1:09:15<00:01,  1.56s/it]   \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: ./processed_project_video.mp4 \n",
+      "\n"
      ]
     }
    ],
